@@ -33,6 +33,7 @@ python-apt (0.7.92) UNRELEASED; urgency=low
   * Introduce apt_pkg.Hashes class.
   * Make AcquireItem objects raise ValueError instead of segfaulting when the Acquire()
     object is shut down or the main object (e.g. AcquireFile) is deallocated.
+  * Unify all Configuration,ConfigurationPtr,ConfigurationSub into one type.
 
   [ Sebastian Heinlein ]
   * apt/progress.py: Extract the package name from the status message
@@ -48,7 +49,7 @@ python-apt (0.7.92) UNRELEASED; urgency=low
   * python/progress.cc:
     - low level code for update_status_full and pulse_items()
 
- -- Julian Andres Klode <jak@debian.org>  Sun, 12 Jul 2009 21:19:40 +0200
+ -- Julian Andres Klode <jak@debian.org>  Tue, 14 Jul 2009 20:42:03 +0200
 
 python-apt (0.7.91) experimental; urgency=low
 
